It definitely works

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ set (EXEC_FILE Matrix.out)
 
 add_library (lMatrix STATIC ${CMAKE_SOURCE_DIR}/src/Matrix.cpp)
 target_compile_features (lMatrix PUBLIC cxx_std_11)
+target_compile_definitions(lMatrix PRIVATE
+    $<$<CONFIG:Debug>:DEBUG=1>
+)
 
 add_executable (${EXEC_FILE})
 target_link_libraries (${EXEC_FILE} PUBLIC lMatrix)
@@ -20,6 +23,9 @@ target_include_directories (${EXEC_FILE} PUBLIC "include")
 target_sources (${EXEC_FILE} PRIVATE ${CMAKE_SOURCE_DIR}/src/main.cpp)
 # target_sources (${EXEC_FILE} PRIVATE ${SRCS})
 target_compile_features (${EXEC_FILE} PUBLIC cxx_std_11)
+target_compile_definitions(${EXEC_FILE} PRIVATE
+    $<$<CONFIG:Debug>:DEBUG=1>
+)
 
 include (CTest)
 enable_testing()
